Avoid doing any extra work in Window::setDesktops() if the window is closed

Window::setDesktops() can be closed if a closed window needs to be evacuated
from a removed virtual desktop. In that case, just update m_desktops and do
nothing extra.

Regarding bug 486622, it used to be possible to activate a closed modal
dialog. After xdg-dialog-v1 refactor changes, kwin should not hit that case
anymore.

BUG: 486622